--- a/src/index.css
+++ b/src/index.css
@@ -213,10 +213,11 @@ img {
   min-width: 180px;
   box-shadow: 0px 3px 1px -2px rgba(0, 0, 0, 0.2),
     0px 2px 2px 0px rgba(0, 0, 0, 0.14), 0px 1px 5px 0px rgba(0, 0, 0, 0.12);
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 30px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 30px;
+  margin-bottom: 30px;
 }
 
 .Button:hover,
@@ -228,4 +229,10 @@ img {
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+.NothingFoundTitle {
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
 }
